# BackEnd_Tutorials

Django/yt_cs_djangocommunity/django_project/: db.sqlite3
Django/yt_cs_djangocommunity/django_project/blog/: views.py
Django/yt_jsc_djangomarket/: db.sqlite3
Django/yt_jsc_djangomarket/main/: models.py  urls.py  views.py
Django/yt_jsc_djangomarket/market/: settings.py  urls.py
FastAPI/fastapi_crud_crash/: pyproject.toml  structure.txt
FastAPI/fastapi_crud_crash/FASTAPI/: main.py
FastAPI/fastapi_crud_crash/FASTAPI/app/: app.py
Flask/opentutorials_webn/: .bitnamirc  .zshrc
Flask/opentutorials_webn/apache2/htdocs/: index.py  (+4 more)
Flask/yt_cp_flaskblog/: app.py  posts.db
Flask/yt_cp_flaskblog/templates/: base.html  edit.html  index.html  new_post.html  posts.html
Flask/yt_fcc_flaskmarket/market/: __init__.py  forms.py  market.db  models.py  routes.py
Flask/yt_fcc_flasktaskmanage/: app.py  test.db
Flask/yt_fcc_flasktaskmanage/templates/: index.html  update.html
java/java1/.metadata/: version.ini
java/java1/DataAndOperation/: .project  Datatype.java  Number.java  StringApp.java  Variable.java
java/java1/HelloWorld/: HelloWorldApp.java
java/java1/HelloWorldGUI/: HelloWorldGUIApp.java
java/java2/MyApp/: AccountingApp.java  AccountingClassApp.java  AccountingIFApp.java  AccountingMethodApp.java
java/java2/Programming/: ClassApp.java  InstanceApp.java  OkayJavaGoInHome.java  Program.java
java/java2/ProjectOOP/: AccountingApp.java  ExceptionApp.java  InheritanceApp.java  InterfaceApp.java  MyException.java  MyOOP.java  OthersOOP.java  StaticApp.java
(+83 files in other folders)
